// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#<SelectField> should render props 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      onChange={[Function]}
      options={
        Array [
          "banana",
          "apple",
          "orange",
        ]
      }
      size="lg"
    >
      <option
        value="banana"
      >
        banana
      </option>
      <option
        value="apple"
      >
        apple
      </option>
      <option
        value="orange"
      >
        orange
      </option>
    </select>
  </div>
</form>
`;

exports[`#<SelectField> should render props from object keys 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      objectKey="id"
      objectValue="name"
      onChange={[Function]}
      options={
        Array [
          Object {
            "id": 1,
            "name": "first",
          },
          Object {
            "id": 2,
            "name": "second",
          },
          Object {
            "id": 3,
            "name": "third",
          },
        ]
      }
      size="lg"
    >
      <option
        value={1}
      >
        first
      </option>
      <option
        value={2}
      >
        second
      </option>
      <option
        value={3}
      >
        third
      </option>
    </select>
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
